--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 .card-post{
     margin-top: .8rem;
     width: 300px;
-    height: 580px;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
